[package]
name = "kufu"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "kufu"

[dependencies]
kube = { version = "0.78.0", features = ["runtime", "derive", "config", "client"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
futures = {version = "0.3"}
sled = {version = "0.34"}
fuser = {version = "0.12", features = ["libfuse"]}
clap = { version = "4.1", features = ["derive"] }
serde = {version = "1.0", features = ["derive"] }
serde_yaml = {version = "0.9"}
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.1.3"
log = "0.4"
tokio = {version = "1.24", features=["full"]}
lazy_static = "1.4.0"
async-trait = "0.1"
libc = "0.2.51"
